<?xml version="1.0"?>
<package format="2">
  <name>tb3_pose_publisher</name>
  <version>0.0.0</version>
  <description>The tb3_pose_publisher package, it It publishes a ROS topic with the robot pose for a TurtleBot3 Burger simulated through Gazebo.</description>

  <maintainer email="kevin.trejosvargas@ucr.ac.cr">Kevin Trejos Vargas</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

</package>
